fixed images being too big

--- a/style.css
+++ b/style.css
@@ -467,9 +467,11 @@ nav ul li a:hover::before{font-size: 14px;}
 .section.gallery h2{padding-bottom: 30px; flex-basis: 100%;}
 .section.gallery img{
 	display: flex;
-	flex-basis: 50%;
-	margin: 0;
+	width: 40%;
+	flex-basis: 40%;
+	margin: 20px;
 	padding: 0;
+	border-radius: 15px;
 	filter: brightness(60%);
 	transition: 0.5s;
 }
